skill animations added

--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@
 
 /* Animation on page load using JavaScript */
 .color.animated {
-    width: 90%; /* Set to desired final width */
+    width: 75%; /* Set to desired final width */
 }
 .color1.animated {
-    width: 75%;
+    width: 70%;
 }
 .color2.animated {
     width: 55%;
@@ -72,3 +72,16 @@
     border-color: black;
     background-color: blueviolet;
 }
+
+.skills-section {
+    max-width: 600px;
+  }
+  .bold {
+    font-weight: bold;
+  }
+  .typing {
+    display: inline;
+    border-right: 2px solid #000;
+    white-space: nowrap;
+    overflow: hidden;
+  }
